<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CCCCCC"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_date"
        android:textColor="#00838F"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_options"
        android:textColor="#006064"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/teal_200"
            android:hint="@string/year"
            android:inputType="number"
            android:textColor="#00838F"
            android:textColorHint="#808080"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/teal_200"
            android:hint="@string/month"
            android:inputType="number"
            android:textColor="#00838F"
            android:textColorHint="#808080"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>
