<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E3E3E3"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvExpenseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_name"
                    android:textColor="#00838F"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvExpenseAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/expense_amount"
                    android:textColor="#0097A7"
                    android:textSize="19sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/tvExpenseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/expense_date"
                    android:textColor="#0097A7"
                    android:textSize="19sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/tvExpenseDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/expense_description"
                    android:textColor="#0097A7"
                    android:textSize="19sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </LinearLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>